# fuel-plugins

./: .gitignore  .gitreview  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  HACKING.rst  MAINTAINERS  MANIFEST.in  README.md  README.rst  build_releases_plugin.sh  install  metadata.yaml  requirements.txt  run_docker.sh  run_tests.sh  setup.cfg  setup.py  tasks.yaml  test-requirements.txt  tox.ini
external_glusterfs/: README.md  environment_config.yaml  metadata.yaml  pre_build_hook  tasks.yaml
external_nfs/: README.md  environment_config.yaml  metadata.yaml  pre_build_hook  tasks.yaml
fuel_lbaas_plugin/: README.md  environment_config.yaml  install  metadata.yaml  register_plugin.py  tasks.yaml
fuel_plugin_builder/: CHANGELOG.md  checks.py  cli.py  consts.py  errors.py  files_manager.py  logger.py  messages.py  reports.py  requirements.txt  setup.py  test-requirements.txt  tox.ini  utils.py  version_mapping.py
fuel_plugin_detach_database/: deployment_tasks.yaml  environment_config.yaml  metadata.yaml  network_roles.yaml  node_roles.yaml  post_install.sh  volumes.yaml
fuel_plugin_detach_keystone/: deployment_tasks.yaml  environment_config.yaml  metadata.yaml  network_roles.yaml  node_roles.yaml  pre_build_hook  volumes.yaml
fuel_plugin_detach_rabbitmq/: environment_config.yaml  metadata.yaml  post_install.sh  tasks.yaml  uninstall.sh
fuel_plugin_example/: environment_config.yaml  fuel-simple-service.py  install  metadata.yaml  pre_build_hook  tasks.yaml
fuel_plugin_example_v1/: environment_config.yaml  metadata.yaml  pre_build_hook
fuel_plugin_example_v2/: environment_config.yaml  metadata.yaml  pre_build_hook  tasks.yaml
fuel_plugin_example_v2_update/: metadata.yaml  pre_build_hook  tasks.yaml
fuel_plugin_example_v3/: README.md  deployment_tasks.yaml  metadata.yaml  network_roles.yaml  (+3 more)
(+438 files in other folders)
