[metadata]
name = fuel-plugin-builder
description-file = README.rst
description = Helps to create and build fuel plugins
author = Mirantis Inc.
author_email = product@mirantis.com
home-page = http://mirantis.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Software Distribution

[files]
packages = fuel_plugin_builder

[entry_points]
console_scripts =
    fpb = fuel_plugin_builder.cli:main
    fuel-plugin-builder = fuel_plugin_builder.cli:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
python-tag = py2
